docs: fix wording issue in index.html

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 sure your favorite apps keep working.</h2>
 
             <p class="content-text" style="padding-left: 10px; text-align: left; font-size: 20px; margin: 2em">
-                I am a passionate backend software developer with deep experience in Python <br>
+                I am a passionate backend software developer with experience in Python <br>
                 and a growing fascination with AI development. Technology excites and inspires <br>
                 me, fueling my drive to solve complex problems and bring ideas to life through <br>
                 innovative code. Every project is an opportunity to push the limits and create <br>
