--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
-    <link rel="icon" href="images/favicon.png" type="image/icon">
-    <link rel="icon" href="imagenes/icon.png" type="image/png">
+    <link rel="icon" href="images/favicon.png" type="image/png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="css/styles.css"> <!-- Enlace a tu archivo CSS -->
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -16,11 +15,22 @@
         <img id="logo" src="images/logo.png" alt="Amnesia Haze Logo"
             style="height: 50px; width: auto; filter: drop-shadow(0 0 10px rgba(255, 255, 255, 0.8)); transition: transform 0.5s ease; padding-left: 10px;">
         <nav id="nav">
-            <a href="about.html" class="nav-link">About</a>
+            <a href="index.html" class="nav-link">About</a>
             <a href="experience.html" class="nav-link">Experience</a>
-            <a href="work.html" class="nav-link">Work</a>
-            <a href="contact.html" class="nav-link">Contact</a>
+            <a href="projects.html" class="nav-link">Projects</a>
         </nav>
+        <!-- Contenedor de los íconos de redes sociales -->
+        <div id="social-links" style="margin-top: 10px;">
+            <a href="https://www.linkedin.com/in/juansebsanchez" target="_blank" class="social-icon">
+                <i class="fab fa-linkedin" style="font-size: 24px; color: #ffffff;"></i>
+            </a>
+            <a href="https://www.instagram.com/sebstn77_" target="_blank" class="social-icon">
+                <i class="fab fa-instagram" style="font-size: 24px; color: #ffffff;"></i>
+            </a>
+            <a href="https://github.com/DevFallenAngel" target="_blank" class="social-icon">
+                <i class="fab fa-github" style="font-size: 24px; color: #ffffff;"></i>
+            </a>
+        </div>
     </div>
 
     <!-- Contenedor principal -->
@@ -29,19 +39,20 @@
         <div id="post" style="background: #0a192f; padding: 1em; box-shadow: 0px 2px 20px rgba(0, 0, 0, 1)">
 
             <p class="title"
-                style="text-align: left; padding-left: 50px; font-size: 25px; margin-bottom: 0.5em; font-weight: bold">
-                Hi, my
-                name is</p>
+                style="color: #5FA7F5 ;text-align: left; margin-left: 50px; font-size: 25px; margin-bottom: 0.5em; font-weight: bold; margin-top: 15px">
+                Hi, my name is</p>
 
             <h1 class="important-text"
                 style="color: #c4c4c4; padding-left: 50px; font-size: 80px; font-weight: bold; margin: -10px">Sebastián
                 Sánchez.
             </h1>
 
-            <h2 class="important-text" style="color: #9a9a9a; font-size: 60px; font-weight: bold; margin: -10px">I make
-                sure your favorite apps keep working.</h2>
+            <h2 class="important-text"
+                style="color: #9a9a9a; font-size: 50px; font-weight: bold; margin: 0; margin-left: 50px">I make sure
+                your favorite apps keep working.</h2>
 
-            <p class="content-text" style="padding-left: 10px; text-align: left; font-size: 20px; margin: 2em">
+            <p class="content-text"
+                style="color: #5FA7F5 ;padding-left: 10px; text-align: left; font-size: 20px; margin: 2em; margin-top: 15px;">
                 I am a passionate backend software developer with experience in Python <br>
                 and a growing fascination with AI development. Technology excites and inspires <br>
                 me, fueling my drive to solve complex problems and bring ideas to life through <br>
