--- a/experience.html
+++ b/experience.html
@@ -15,7 +15,7 @@
         <img id="logo" src="images/logo.png" alt="Amnesia Haze Logo"
             style="height: 50px; width: auto; filter: drop-shadow(0 0 10px rgba(255, 255, 255, 0.8)); transition: transform 0.5s ease; padding-left: 10px;">
         <nav id="nav">
-            <a href="about.html" class="nav-link">About</a>
+            <a href="index.html" class="nav-link">About</a>
             <a href="experience.html" class="nav-link">Experience</a>
             <a href="projects.html" class="nav-link">Projects</a>
         </nav>
